--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         <span>Call Us: (012) 6985 236 7512</span>
     </section>
     <section id="hero">
-      hero image here
+        <div class="overlay"></div>
+        <div class="text">
+            <p>NOW YOU CAN FEEL THE ENERGY <br></p>
+            <h1>Start your day with a creamy Coffee</h1>
+            <button id="discover-button">DISCOVER MORE</button>
+          </div>  
     </section>
 </body>
 </html>
