--- a/index.html
+++ b/index.html
@@ -50,5 +50,15 @@
             <button id="discover-button">DISCOVER MORE</button>
           </div>  
     </section>
+    <section id="body-review">
+        <img src="./assets/images/review1.jpg" alt="body photo">
+        <div id="body-text">
+            <h1>Why You Need Slimmer Me Coffee</h1>
+            <p>"Our purely natural slimming coffee is carefully crafted to produce the best results for our clients very successfully.</p>
+            <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals, you can enjoy your favourite meals without any guilt or fear.</p>
+            <p>Busola Tom - <span>CEO of SlimmerMe</span></p>
+            <p><img src="./assets/images/signature.png.webp" alt="signature"></p>
+        </div>
+    </section>
 </body>
 </html>
