--- a/index.html
+++ b/index.html
@@ -60,5 +60,61 @@
             <p><img src="./assets/images/signature.png.webp" alt="signature"></p>
         </div>
     </section>
+    <section id="grid-form">
+        <div id="grid-container">
+            <div class="grid-item">
+                <img src="" alt="">
+                <p>Coffee Latte</p>
+                <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
+            </div>
+            <div class="grid-item">
+                <img src="" alt="">
+                <p>Cappucino</p>
+                <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
+            </div>
+            <div class="grid-item">
+                <img src="" alt="">
+                <p>Macchiato</p>
+                <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
+            </div>
+            <div class="grid-item">
+                <img src="" alt="">
+                <p>Americano</p>
+                <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
+            </div>
+        </div>
+        <div id="form-container">
+            <div id="form-head">
+            <p>Get Free Quote</p>
+            <p>Bring to the table win-win survival strategies to ensure proactive domination.</p>
+            </div>
+            <form action="">
+                <div id="input-grid">
+                    <span class="form-item">
+                        <!-- <label for="name">Name</label> -->
+                        <input type="text" id="name" placeholder="Your Name">
+                    </span> 
+                    <span class="form-item">
+                        <!-- <label for="email">Email</label> -->
+                        <input type="email" id="email" placeholder="Email">
+                    </span>
+                    <span class="form-item">
+                        <!-- <label for="class">Choose Your Class</label> -->
+                        <select name="variant" id="variant">
+                            <option value="latte">Coffee Latte</option>
+                            <option value="cappucino">Cappucino</option>
+                            <option value="mocha">Macchiato</option>
+                            <option value="americano">Americano</option>
+                        </select>
+                    </span>  
+                    <span id="message">
+                        <!-- <label for="message"></label><br><br> -->
+                        <textarea id="message" name="message" rows="4" cols="50" placeholder="Message"></textarea>
+                    </span>
+                </div>
+                <button id="mbutton">SUBMIT</button>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
