Page update-work in progress

--- a/index.html
+++ b/index.html
@@ -61,32 +61,36 @@
         </div>
     </section>
     <section id="grid-form">
-        <div id="grid-container">
+        <div id="sub-header">
+            <p>Our Flavours</p>
+        </div> 
+        <div id="gridform-main">
+            <div id="grid-container">
             <div class="grid-item">
-                <img src="" alt="">
+                <img src="./assets/images/services1.svg" alt="">
                 <p>Coffee Latte</p>
                 <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
             </div>
             <div class="grid-item">
-                <img src="" alt="">
+                <img src="./assets/images/services2.svg" alt="">
                 <p>Cappucino</p>
                 <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
             </div>
             <div class="grid-item">
-                <img src="" alt="">
+                <img src="./assets/images/services3.svg" alt="">
                 <p>Macchiato</p>
                 <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
             </div>
             <div class="grid-item">
-                <img src="" alt="">
+                <img src="./assets/images/services4.svg" alt="">
                 <p>Americano</p>
                 <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
             </div>
-        </div>
-        <div id="form-container">
+            </div>
+            <div id="form-container">
             <div id="form-head">
             <p>Get Free Quote</p>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination.</p>
+            <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
             </div>
             <form action="">
                 <div id="input-grid">
@@ -115,6 +119,66 @@
                 <button id="mbutton">SUBMIT</button>
             </form>
         </div>
+    </div>
+    </section>
+    <section id="choose-us">
+            <p>Why Choose Us?</p>
+            <p>"Our purely natural slimming coffee is carefully crafted to produce the best results for our clients very successfully..</p>
+            <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
+            <button id="choose-button">LEARN MORE</button>
+    </section>
+    <section id="swiper">
+
+    </section>
+    <section id="slider-image">
+    <img src="./assets/images/hero1.jpg" alt="">
+    </section>
+    <section id="recent-news">
+        <div class="sub-header">
+            <span>Recent News</span>
+            <span>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster.</span>
+        </div>
+        <div id="blogcards">
+            <div class="cardhome">
+                <img class="cardimg" src="./assets/images/coffegrp.jpg" alt="">
+                <div class="cardtext">
+                    <a href="#"><p>BEST PLACES FOR WINE</p></a>
+                    <p>Phasellus lorem enim, luctus ut velit eget, con-vallis egestas eros.</p>
+                    <a href="#" class="our-story1">CONTINUE READING &nbsp; &nbsp; <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="cardhome">
+                <img class="cardimg" src="./assets/images/coffegrp.jpg" alt="">
+                <div class="cardtext">
+                    <a href="#"><p>EGGS AND CHEESE</p></a>
+                    <p>Duis elementum, risus sit amet lobortis nunc justo condimentum ligula, vitae feugiat</p>
+                    <a href="#" class="our-story1">CONTINUE READING &nbsp; &nbsp; <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="supporter">
+        <div id="support-main">
+        <div id="support-one">
+            <img src="" alt="">
+            <span>Jackon Keliah-Legal Support</span>
+        </div>
+        <div id="support-two">
+            <span>Call For A Free Consulting</span>
+            <button></button>
+        </div>
+        </div>
+    </section>
+    <section id="footer">
+     <img src="./assets/logo/png/logo-no-background.png" alt="">
+     <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
+     <nav>
+        <span><a href="#">Home</a></span>
+        <span><a href="#">About</a></span>
+        <span><a href="#">Coffee</a></span>
+        <span><a href="#">Review</a></span>
+        <span><a href="#">Pages</a></span>
+     </nav>
     </section>
 </body>
 </html>
