Page update-work in progress

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </span>
         </div>
         <button id="order-button">Make An Order</button>
-        <span>Call Us: (012) 6985 236 7512</span>
+        <span>Call Us: (+234) 818 126 9392 </span>
     </section>
     <section id="hero">
         <div class="overlay"></div>
@@ -170,7 +170,7 @@
         </div>
     </section>
     <section id="footer">
-     <img src="./assets/logo/png/logo-no-background.png" alt="">
+     <img src="./assets/logo/png/logo-no-backgroundwhite.png" alt="">
      <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
      <nav>
         <span><a href="#">Home</a></span>
@@ -179,6 +179,23 @@
         <span><a href="#">Review</a></span>
         <span><a href="#">Pages</a></span>
      </nav>
+     <br><br><br><br>
+     <div id="footer-cover">
+        <div id="footer-contact">
+            <p>Call Us: +234 (0) 8181269392 slimmermecoffee@gmail.com</p>
+        </div>
+        <div id="footer-icons">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>      
+        </div>
+        <button id="footer-button">Make An Order</button>
+     </div>
+     <br><br>
+     <div id="footercover-two">
+        <p>Copyright ©2024 All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="">Busola Tom</a></p>
+     </div>
     </section>
 </body>
 </html>
