--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/main.css">
      <!-- Include font awesome library -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+      <!-- Link Swiper's CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
     <section id="hero-top">
@@ -51,7 +53,12 @@
           </div>  
     </section>
     <section id="body-review">
+        <div id="container">
         <img src="./assets/images/review1.jpg" alt="body photo">
+        <div id="experience">
+            12 Years of experience
+        </div>
+        </div>
         <div id="body-text">
             <h1>Why You Need Slimmer Me Coffee</h1>
             <p>"Our purely natural slimming coffee is carefully crafted to produce the best results for our clients very successfully.</p>
@@ -128,10 +135,71 @@
             <button id="choose-button">LEARN MORE</button>
     </section>
     <section id="swiper">
-
+        <div #swiperRef="" class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./assets/images/americano.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/coffeelatte.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/macchiato.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/coffeelatte.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/americano.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/coffeelatte.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/macchiato.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/coffeelatte.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/americano.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/coffeelatte.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/macchiato.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/coffeelatte.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/americano.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/coffeelatte.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/macchiato.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/coffeelatte.jpg" alt="">
+              </div>
+            </div>
+        </div>     
     </section>
     <section id="slider-image">
     <img src="./assets/images/hero1.jpg" alt="">
+    <div id="overlay">
+        <div class="swiper2 mySwiper2">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide2">Slide 1</div>
+              <div class="swiper-slide2">Slide 2</div>
+              <div class="swiper-slide2">Slide 3</div>
+              <div class="swiper-slide2">Slide 4</div>
+            </div>
+        </div>      
+    </div>
     </section>
     <section id="recent-news">
         <div class="sub-header">
@@ -179,7 +247,7 @@
         <span><a href="#">Review</a></span>
         <span><a href="#">Pages</a></span>
      </nav>
-     <br><br><br><br>
+     <br><br><br><br><br><br><br><br>
      <div id="footer-cover">
         <div id="footer-contact">
             <p>Call Us: +234 (0) 8181269392 slimmermecoffee@gmail.com</p>
@@ -197,5 +265,8 @@
         <p>Copyright ©2024 All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="">Busola Tom</a></p>
      </div>
     </section>
+      <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
