--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <div id="container">
         <img src="./assets/images/review1.jpg" alt="body photo">
         <div id="experience">
-            12 Years of experience
+            <p id="revp-one">12</p> <p id="revp-two">Years of experience</p>
         </div>
         </div>
         <div id="body-text">
-            <h1>Why You Need Slimmer Me Coffee</h1>
-            <p>"Our purely natural slimming coffee is carefully crafted to produce the best results for our clients very successfully.</p>
-            <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals, you can enjoy your favourite meals without any guilt or fear.</p>
-            <p>Busola Tom - <span>CEO of SlimmerMe</span></p>
+            <p id="p-one"><br>Why You Need <br>Slimmer Me Coffee</p><br><br><br><br>
+            <p id="p-two">"Our purely natural slimming coffee is carefully crafted to produce the best results for our clients very successfully.</p>
+            <p id="p-three">It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals, you can enjoy your favourite meals without any guilt or fear.</p>
+            <p id="p-four">Busola Tom - <span id="ceo">CEO of SlimmerMe</span></p>
             <p><img src="./assets/images/signature.png.webp" alt="signature"></p>
         </div>
     </section>
@@ -191,13 +191,13 @@
     <section id="slider-image">
     <img src="./assets/images/hero1.jpg" alt="">
     <div id="overlay">
-        <div class="swiper2 mySwiper2">
+        <!-- <div class="swiper2 mySwiper2">
             <div class="swiper-wrapper">
               <div class="swiper-slide2">Slide 1</div>
               <div class="swiper-slide2">Slide 2</div>
               <div class="swiper-slide2">Slide 3</div>
               <div class="swiper-slide2">Slide 4</div>
-            </div>
+            </div> -->
         </div>      
     </div>
     </section>
@@ -247,7 +247,7 @@
         <span><a href="#">Review</a></span>
         <span><a href="#">Pages</a></span>
      </nav>
-     <br><br><br><br><br><br><br><br>
+     <br><br><br><br>
      <div id="footer-cover">
         <div id="footer-contact">
             <p>Call Us: +234 (0) 8181269392 slimmermecoffee@gmail.com</p>
