--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             </div>
             <div id="form-container">
             <div id="form-head">
-            <p>Get Free Quote</p>
-            <p>It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
+            <p id="formp-one">Get Free Quote</p>
+            <p id="formp-two">It works to suppress your appetite, curb sugar cravings, boost your metabolism to burn fat faster, block carbohydrate and fat absorption from heavy meals.</p>
             </div>
             <form action="">
                 <div id="input-grid">
